--- a/about.html
+++ b/about.html
@@ -23,7 +23,9 @@ to make tracking credits and service hours easier by having it online and spread
 and hours organized by having a table to clearly see what else you need to have a successful school career. The table is expandable as you began to put more hours in </br> 
 and credits in. This simple and mess free way to organize is perfect for students. We built and designed this website by using JavaScript, HTML, and CSS. We used JavaScript </br>
 for the expanding table and then CSS for the rest of the decoration and the color of the website. We chose to use the 60-30-10 rule for the color scheme consisting </br> 
-of #FBFBFB, #54D4F0, and #00C3A1. Then we used HTML for the rest of the website from the navigation bar to the rounded team member pictures.</p>
+of #FBFBFB, #54D4F0, and #00C3A1. Then we used HTML for the rest of the website from the navigation bar to the rounded team member pictures. In the </br>
+future, we are planning to futher expand the design of our website thoughout and make it even better. We hope in the future to be able to </br>
+implement PATH for use into school districts around the country./p>
   </body>
 </html>
 
