--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
      </br><td class="team-td">XinTong</td>
      </tr>
      <tr>
-     </br><td class="team-td2">Angela is currently a high school student..</td>
-     </br><td class="team-td2">Angela is currently a high school student..</td>
-     </br><td class="team-td2">Angela is currently a high school student..</td>
+     </br><td class="team-td2">Jackie is currently a high school student and our front-end developer.</td>
+     </br><td class="team-td2">Angela is currently a high school student and our UI developer and Project Manager</td>
+     </br><td class="team-td2">Angela is currently a high school student and our UI developer and also our front-end developer</td>
      </tr>
     </table>
     </br>
