--- a/index.html
+++ b/index.html
@@ -32,13 +32,9 @@
      </th>
      </tr>
     </table>
-    <table style="width:95%; align-items:center;">
-     <tr>
-      <th><div class="color-block">
+    <div class="color-block">
       <p>Path is the easiest way to track your graduation requirements online!</p>
-      </div></th>
-     </tr>
-    </table>
+      </div>
     </br>
     </br>
     </br>
