--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
     </br>
     </br>
     </br>
-    <th><h3 class="team-greet">
-    Meet the Team </h3></th>
+    <th><p class="team-greet">
+    Meet the Team <p></th>
     </tr>
     </table>
-    </br>
     </br>
     <table style="width:100%; align-items:center; text-align:center;">
      <tr>
