--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
       <th><div><img class="owl" src="https://images.unsplash.com/photo-1467811884194-ae868cd3f090?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDE2fHxvd2x8ZW58MHx8fHwxNjc2ODMwMDc0&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" alt="White Owl Picture" width="250" height="250" style="object-fit: cover; object-position: 5% 10%; border-radius:50%; box-sizing: border-box;"></th></div>
       <th><div><img src="https://images.unsplash.com/photo-1484406566174-9da000fda645?crop=entropy&cs=tinysrgb&fm=jpg&ixid=Mnw3MjAxN3wwfDF8c2VhcmNofDR8fGFuaW1hbHxlbnwwfHx8fDE2NzY3NDQxMjI&ixlib=rb-4.0.3&q=80&q=85&fmt=jpg&crop=entropy&cs=tinysrgb&w=450" alt="Deer Picture" width="250" height="250" style="object-fit: cover; border-radius:50%; box-sizing: border-box;"></th></div>
      </tr>
-     <tr class="team-td">
-     </br><td>Jackie</td>
-     </br><td>Angela</td>
-     </br><td>XinTong</td>
+     <tr>
+     </br><td><p class="team-td2">Jackie</p></td>
+     </br><td><p class="team-td2">Angela</p></td>
+     </br><td><p class="team-td2">XinTong</p></td>
      </tr>
-     <tr class="team-td2">
-     </br><td>Jackie is currently a high school student and our front-end developer.</td>
-     </br><td>Angela is currently a high school student and our UI developer and Project Manager</td>
-     </br><td>Angela is currently a high school student and our UI developer and also our front-end developer</td>
+     <tr>
+     </br><td><p class="team-td2">Jackie is currently a high school student and our front-end developer</p></td>
+     </br><td><p class="team-td2">Angela is currently a high school student and our UI developer and Project Manager</p></td>
+     </br><td><p class="team-td2">Angela is currently a high school student and our UI developer and also our front-end developer</p></td>
      </tr>
     </table>
     </br>
