--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      </tr>
     </table>
     <div class="color-block">
-      <p>Path is the easiest way to track your graduation requirements online!</p>
+      <p id="colorp">Path is the easiest way to track your graduation requirements online!</p>
     </div>
     </br>
     </br>
