--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
      </br><td><p class="team-td2">XinTong</p></td>
      </tr>
      <tr>
-     </br><td><p class="team-td2">Jackie is currently a high school student and our front-end developer</p></td>
-     </br><td><p class="team-td2">Angela is currently a high school student and our UI developer and Project Manager</p></td>
-     </br><td><p class="team-td2">Angela is currently a high school student and our UI developer and also our front-end developer</p></td>
+     </br><td><p class="team-td2">Jackie is currently a high school student and our Front-End Developer</p></td>
+     </br><td><p class="team-td2">Angela is currently a high school student and our UI Developer and Project Manager</p></td>
+     </br><td><p class="team-td2">XinTong is currently a high school student and our UI Developer and Front-End Developer</p></td>
      </tr>
     </table>
     </br>
