--- a/hours.html
+++ b/hours.html
@@ -76,9 +76,9 @@ function myFunction() {
   var cell1 = row.insertCell(0);
   var cell2 = row.insertCell(1);
   var cell3 = row.insertCell(2);
-  cell1.innerHTML = "NEW CELL1";
-  cell2.innerHTML = "NEW CELL2";
-  cell3.innerHTML = "NEW CELL2";
+  cell1.innerHTML = "Untitled";
+  cell2.innerHTML = "Untitled";
+  cell3.innerHTML = "Untitled";
 }
 </script>
 
