--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
      <td class="nav-td" ><a class="one" href="https://lamjackie.github.io/Hackathon/about.html" style="text-decoration: none;" >About</a></td>
      </tr> 
     </table>
-    <p class = "aboutdesc" style="text-align:center">We all had a common problem in my team and that was keeping track of graduation requirements. The many categories of credits and </br> 
+    <center><p class = "aboutdesc" style="text-align:center">We all had a common problem in my team and that was keeping track of graduation requirements. The many categories of credits and </br> 
   the types of service hours got us confused. So, we decided to create PATH.  PATH is geared towards high school and college students. It is designed </br> 
 to make tracking credits and service hours easier by having it online and spread out properly. Like we said before, PATH helps keep your credits </br> 
 and hours organized by having a table to clearly see what else you need to have a successful school career. The table is expandable as you began to put more hours in </br> 
@@ -25,7 +25,7 @@ and credits in. This simple and mess free way to organize is perfect for student
 for the expanding table and then CSS for the rest of the decoration and the color of the website. We chose to use the 60-30-10 rule for the color scheme consisting </br> 
 of #FBFBFB, #54D4F0, and #00C3A1. Then we used HTML for the rest of the website from the navigation bar to the rounded team member pictures. In the </br>
 future, we are planning to further expand the design of our website throughout  and make it even better. We hope in the future to be able to </br>
-implement PATH for use into school districts around the country.</p>
+implement PATH for use into school districts around the country.</p></center>
   </body>
 </html>
 
