--- a/hours.html
+++ b/hours.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="stylesheet.css">
+  <title>PATH</title>
+    <link rel="icon" href="https://media.discordapp.net/attachments/1053111655103463485/1076649139422638171/Tracker_icon.png">
   
 </head>  
 <body>
