--- a/credits.html
+++ b/credits.html
@@ -5,6 +5,9 @@
     <title>PATH</title>
     
     <link rel="stylesheet" href="stylesheet.css">
+    <title>PATH</title>
+    <link rel="icon" href="https://media.discordapp.net/attachments/1053111655103463485/1076649139422638171/Tracker_icon.png">
+    
       </head>
    
   <body>
