--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
      </tr>
      <tr>
      </br><td><p class="team-td2">Jackie is currently a high school student and our Front-End Developer</p></td>
-     </br><td><p class="team-td2">Angela is currently a high school student and our UI Developer and Project Manager</p></td>
-     </br><td><p class="team-td2">XinTong is currently a high school student and our UI Developer and Front-End Developer</p></td>
+     </br><td><p class="team-td2">Angela is currently a high school student and our UX Designer and Project Manager</p></td>
+     </br><td><p class="team-td2">XinTong is currently a high school student and our UI Designer and Front-End Developer</p></td>
      </tr>
     </table>
     </br>
