--- a/hours.html
+++ b/hours.html
@@ -27,7 +27,7 @@
    <br>
    <br>
   
-<table id="hourstable">
+<center><table id="hourstable"></center>
   <tr id="hourstr">
   <th id="hoursth">Hours Needed</th>
   <th id="hoursth">Description of Service Activity</th>
