--- a/hours.html
+++ b/hours.html
@@ -49,7 +49,7 @@
   
 <script>
 var button = document.createElement("button");
-<center>button.innerHTML = "Submit";</center>
+button.innerHTML = "Submit";
 
 var body = document.getElementsByTagName("body")[0];
 body.appendChild(button);
